--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next": "^14.2.5",
     "prettier": "^2.8.4",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
   }
