--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node": ">=18.x"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.5",
     "@types/cheerio": "^0.22.31",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
