--- a/package.json
+++ b/package.json
@@ -21,25 +21,25 @@
     "node": ">=18.x"
   },
   "dependencies": {
-    "@next/third-parties": "^14.2.5",
+    "@next/third-parties": "^15.5.4",
     "@types/cheerio": "^0.22.31",
-    "@types/node": "18.15.3",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
+    "@types/node": "^20.16.5",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
     "cheerio": "^1.0.0-rc.12",
     "date-fns": "^2.29.3",
     "date-fns-tz": "^2.0.0",
     "encoding": "^0.1.13",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
+    "eslint": "^9.13.0",
+    "eslint-config-next": "^15.5.4",
     "eslint-config-prettier": "^8.7.0",
     "highlight.js": "^11.7.0",
     "microcms-js-sdk": "^2.3.2",
-    "next": "^14.2.5",
+    "next": "^15.5.4",
     "prettier": "^2.8.4",
-    "react": "18.2.0",
+    "react": "^19.1.1",
     "react-burger-menu": "^3.0.9",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-dom": "^19.1.1",
+    "typescript": "^5.5.4"
   }
 }
