--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@next/third-parties": "^15.5.4",
+    "@szhsin/react-menu": "^4.5.0",
     "@types/cheerio": "^0.22.31",
     "@types/node": "^20.16.5",
     "@types/react": "^19.1.3",
@@ -33,12 +34,12 @@
     "eslint": "^9.13.0",
     "eslint-config-next": "^15.5.4",
     "eslint-config-prettier": "^8.7.0",
+    "hamburger-react": "^2.5.2",
     "highlight.js": "^11.7.0",
     "microcms-js-sdk": "^2.3.2",
     "next": "^15.5.4",
     "prettier": "^2.8.4",
     "react": "^19.1.1",
-    "react-burger-menu": "^3.0.9",
     "react-dom": "^19.1.1",
     "typescript": "^5.5.4"
   }
